fix: top likes gap

--- a/app/(home)/desktop/Information.module.scss
+++ b/app/(home)/desktop/Information.module.scss
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  gap: 0.1rem;
+  gap: 0.2rem;
 }
 
 .likePost {
